kubernetes/task-service/task-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
        - name: task-service
          image: gzn2zjsn/task-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
