kubernetes/task-service/task-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service
spec:
  selector:
    app: task-service
  ports:
      - protocol: TCP
        targetPort: 8080
        port: 8080
