kubernetes/task-service/task-service-auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-os-to-ts
spec:
  selector:
    matchLabels:
      app: task-service
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/default/sa/order-service-service-account"
